force-app/main/default/objects/Referral_Contact__c/fields/Created_Time__c.field-meta.xml
<CustomField>
    <fullName>Created_Time__c</fullName>
    <description>The date and time this record was created.</description>
    <inlineHelpText>The date and time this record was created.</inlineHelpText>
    <label>Created Time</label>
    <type>DateTime</type>
</CustomField>