force-app/main/default/objects/Referral_Contact__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>Email of the referral contact</description>
    <inlineHelpText>Email of the referral contact</inlineHelpText>
    <label>Email</label>
    <type>Email</type>
</CustomField>