force-app/main/default/objects/Referral_Contact__c/fields/Email_Opt_Out__c.field-meta.xml
<CustomField>
    <fullName>Email_Opt_Out__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Shows whether this contact prefers not to receive emails.</description>
    <inlineHelpText>Shows whether this contact prefers not to receive emails.</inlineHelpText>
    <label>Email Opt Out</label>
    <type>Checkbox</type>
</CustomField>