force-app/main/default/objects/Referral_Contact__c/fields/First_Name__c.field-meta.xml
<CustomField>
    <fullName>First_Name__c</fullName>
    <description>The first name of the referral contact.</description>
    <inlineHelpText>The first name of the referral contact</inlineHelpText>
    <label>First Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>