force-app/main/default/objects/Referral_Contact__c/fields/Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Last_Name__c</fullName>
    <description>The last name of the referral contact.</description>
    <inlineHelpText>The last name of the referral contact.</inlineHelpText>
    <label>Last Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>