force-app/main/default/objects/Referral_Contact__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <description>Phone of the referral contact.</description>
    <inlineHelpText>Phone of the referral contact.</inlineHelpText>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>