force-app/main/default/objects/Referral_Contact__c/fields/Salutation__c.field-meta.xml
<CustomField>
    <fullName>Salutation__c</fullName>
    <label>Salutation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Salutation_Global_Set</valueSetName>
    </valueSet>
</CustomField>